# VertexAnimation

./: CMakeLists.txt  README.md  console.cpp  ent_table.xma  main.cpp  main.h  shaders.cpp  shaders.h  textures.cpp  textures.h  timer.cpp  timer.h  xmaPerVertexExport.ms  xmlevelshaders.cpp  xmlevelshaders.h  xmvertexanimation.cpp  xmvertexanimation.h
directx/: ddraw.h
math/: mat4.cpp  mat4.h  vector.cpp  vector.h
max modely/entities/: stul_dyn.dds
